syntax = "proto3";

//export PATH=$PATH:$HOME/go/bin
//export PATH=$PATH:/usr/local/go/bin
//export PATH=$PATH:/home/comradyo/go
//protoc --go_out=plugins=grpc:. *.proto

option go_package = "../proto";

message Event {
    string ID = 1;
    string Title = 2;
    string Description = 3;
    string Text = 4;
    string City = 5;
    string Category = 6;
    int32 Viewed = 7;
    string ImgUrl = 8;
    repeated string Tag = 9;
    string Date = 10;
    string Geo = 11;
    string AuthorId = 12;
}

message EventId {
    string ID = 1;
}

message AuthorId {
    string ID = 1;
}

message UpdateEventRequest {
    Event event = 1;
    string userId = 2;
}

message DeleteEventRequest {
    string eventId = 1;
    string userId = 2;
}

message GetEventsRequest {
    string title = 1;
    string category = 2;
    repeated string tags = 3;
}

message Events {
    repeated Event event = 1;
}

message Empty {}

service Repository {
    rpc CreateEvent(Event) returns (EventId) {}
    rpc UpdateEvent(UpdateEventRequest) returns (Empty) {}
    rpc DeleteEvent(DeleteEventRequest) returns (Empty) {}
    rpc GetEventById(EventId) returns (Event) {}
    rpc GetEvents(GetEventsRequest) returns (Events) {}
    rpc GetEventsFromAuthor(AuthorId) returns (Events) {}
}